:hammer:Fixed whitespace at bottom of page.

--- a/assets/src/sass/components/_darkmode.scss
+++ b/assets/src/sass/components/_darkmode.scss
@@ -15,13 +15,13 @@
   }
 
   .sun {
-    visibility: hidden;
+    display: none;
   }
 }
 //Dark mode//
 .outer-dark {
   background: linear-gradient(to top, #412b6c, #13123c, #02020e);
-
+  height: 105vh;
   .title, .toggle {
     color: white;
 
@@ -42,7 +42,7 @@
     }
 
     .moon {
-      visibility: hidden;
+      display: none;
     }
   }
 }
@@ -58,6 +58,7 @@ label {
   border-radius: 100px;
   bottom: 20px;
   right: 15px;
+
 
 }
 
